<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.nidhisingh.todo.activities.DetailActivity">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            card_view:cardCornerRadius="@dimen/radius"
            card_view:cardElevation="@dimen/margin">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tasknameInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorAccent"
                    android:layout_marginEnd="@dimen/margin_end"
                    android:layout_marginLeft="@dimen/margin_end"
                    android:layout_marginRight="@dimen/margin_end"
                    android:layout_marginStart="@dimen/margin_end"
                    android:layout_marginTop="@dimen/margin_top"
                    app:theme="@style/MyStyle"
                    >

                    <EditText
                        android:id="@+id/taskname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:hint="@string/TaskName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/taskNotesInputlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_end"
                    android:textColorHint="@color/colorAccent"
                    android:layout_marginLeft="@dimen/margin_end"
                    android:layout_marginRight="@dimen/margin_end"
                    android:layout_marginStart="@dimen/margin_end"
                    android:layout_marginTop="@dimen/margin_end"
                    app:theme="@style/MyStyle">

                    <EditText
                        android:id="@+id/taskNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:hint="@string/task_notes" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cardview_height"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                card_view:cardCornerRadius="@dimen/radius"
                card_view:cardElevation="@dimen/margin">

                <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/segmentedpriority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_margin="@dimen/segment_margin"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    segmentedgroup:sc_border_width="@dimen/radius"
                    segmentedgroup:sc_corner_radius="@dimen/segment_margin"
                    segmentedgroup:sc_tint_color="@color/colorAccent">

                    <RadioButton
                        android:id="@+id/buttonhigh"
                        style="@style/RadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/high" />

                    <RadioButton
                        android:id="@+id/buttonlow"
                        style="@style/RadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/low" />
                </info.hoang8f.android.segmented.SegmentedGroup>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/card_viewstatus"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cardview_height"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                card_view:cardCornerRadius="@dimen/radius"
                card_view:cardElevation="@dimen/margin">

                <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/segmentedstatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_margin="@dimen/segment_margin"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    segmentedgroup:sc_border_width="@dimen/radius"
                    segmentedgroup:sc_corner_radius="@dimen/segment_margin"
                    segmentedgroup:sc_tint_color="@color/colorAccent">

                    <RadioButton
                        android:id="@+id/buttontodo"
                        style="@style/RadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/todo" />

                    <RadioButton
                        android:id="@+id/buttondone"
                        style="@style/RadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/done" />
                </info.hoang8f.android.segmented.SegmentedGroup>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:id="@+id/card_viewCategory"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height_max"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            card_view:cardCornerRadius="@dimen/radius"
            card_view:cardElevation="@dimen/margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                android:id="@+id/categorytext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/segment_margin"
                android:layout_marginTop="@dimen/segment_margin"
                android:textColor="@color/colorAccent"
                android:text="@string/select_category" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_viewduedatetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                card_view:cardCornerRadius="@dimen/radius"
                card_view:cardElevation="@dimen/margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/dueDateButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin"
                        android:layout_marginLeft="@dimen/segment_margin"
                        android:clickable="true"
                        android:background="@drawable/ic_event_black"
                        />

                    <TextView
                        android:id="@+id/dueDatetext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/textview_margin_left"
                        android:layout_marginTop="@dimen/segment_margin"
                        android:textColor="@android:color/black"
                        android:clickable="true"
                        android:text="@string/mm_dd_yyyy" />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/segment_margin"
                    android:layout_marginBottom="@dimen/segment_margin"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/dueTimeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin"
                        android:layout_marginLeft="@dimen/segment_margin"
                        android:clickable="true"
                        android:background="@drawable/ic_access_time"/>

                    <TextView
                        android:id="@+id/dueTimetext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/textview_margin_left"
                        android:layout_marginTop="10dp"
                        android:clickable="false"
                        android:textColor="@android:color/black"
                        android:text="@string/hh_mm" />
                </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/savebutton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/save_button_height"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>

